[gd_scene load_steps=3 format=3 uid="uid://cyy0rquh4r2g5"]

[ext_resource type="Script" uid="uid://dtw7n33nnyewo" path="res://mid_game_shop.gd" id="1_0k8m2"]
[ext_resource type="Texture2D" uid="uid://dwj1jsqkci76e" path="res://MidGameShop.png" id="2_midshop"]

[node name="MidGameShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0k8m2")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_midshop")
expand_mode = 1
stretch_mode = 6

[node name="CharacterImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="StartBack9Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 308.0
offset_top = 255.0
offset_right = 508.0
offset_bottom = 305.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Back 9"
